--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -341,6 +341,16 @@
 	"file-loader.load": "Загрузить",
 	"file-loader.load-file": "Загрузите файлы",
 	"file-loader.put-file-here": "Перетащите сюда файл",
+	"footer.blog": "Блог",
+	"footer.copyright": "© Gigrum, все права защищены, 2019",
+	"footer.list-title1": "Категории",
+	"footer.list-title2": "Поддержка",
+	"footer.list2-item1": "Центр поддержки",
+	"footer.list2-item2": "Вопросы",
+	"footer.list2-item3": "Условия соглашения",
+	"footer.list2-item4": "Отказ от ответственности",
+	"footer.list2-item5": "Политика конфиденциальности",
+	"footer.text": "oнлайн биржа фрилансеров для бизнеса",
 	"general.about-freelancer": "О фрилансере",
 	"general.add": "Добавить",
 	"general.additional-education": "Дополнительное образование",
@@ -400,8 +410,83 @@
 	"general.user-free": "свободен",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Как это работает",
+	"home-page.advantages-btn": "зарегистрироваться",
+	"home-page.advantages-item1": "Защита платежей",
+	"home-page.advantages-item1-text": "Для безопасности сделки, зарезервированная сумма хранится на сервисе до успешного выполнения проекта.",
+	"home-page.advantages-item2": "Прозрачность",
+	"home-page.advantages-item2-text": "Только комиссия за сделку. Никаких скрытых платежей, платного повышения рейтинга и статусов пользователя.",
+	"home-page.advantages-item3": "Быстрые выплаты",
+	"home-page.advantages-item3-text": "Отправление средств на счет фрилансера осуществляется на протяжении часа после успешного завершения проекта.",
+	"home-page.advantages-item4": "Кэшбэк",
+	"home-page.advantages-item4-text": "Процент от каждой успешной сделки, которая прошла без арбитража, будет начисляться на личный счет в сервисе.",
+	"home-page.advantages-item5": "Удобная система",
+	"home-page.advantages-item5-text": "Простой и комфортный интерфейс для мониторинга выполнения проекта, переписки, отправки файлов.",
+	"home-page.advantages-subtitle": "преимущества",
+	"home-page.advantages-text": "Добро пожаловать в сообщество веб-разработчиков, дизайнеров, создателей текстового, графического и видео контента, переводчиков и мастеров озвучки.",
+	"home-page.advantages-title": "Почему Gigrum?",
+	"home-page.app-news-subtitle": "мобильное приложение",
+	"home-page.app-news-text": "Наша команда уже разрабатывает для вас мобильное приложение.",
+	"home-page.app-news-title": "Совсем скоро!",
+	"home-page.app-news-title2": "Ваш помощник будет всегда под рукой",
+	"home-page.get-start-btn": "Создать аккаунт",
+	"home-page.get-start-subtitle": "Создайте аккаунт и находите лучших фрилансеров для своего бизнеса.",
+	"home-page.get-start-title": "Готовы начать?",
+	"home-page.guestion-btn": "Найти ответ",
+	"home-page.guestion-itme1-customer-text": "Отправление средств на банковский счет получателя осуществляется на протяжении часа после успешного завершения проекта. Время обработки платежа зависит от специфики деятельности банка получателя.",
+	"home-page.guestion-itme1-customer-title": "Сколько времени нужно для вывода средств?",
+	"home-page.guestion-itme1-freelancer-text": "Профайл - визитная карточка фрилансера. Важно создать его грамматически правильно и читабельно. Гибкий текстовый редактор позволяет стилистически оформить профайл, чтобы он выглядел профессионально.",
+	"home-page.guestion-itme1-freelancer-title": "Создание профайла",
+	"home-page.guestion-itme2-customer-text": "Согласованная сумма снимается со счета заказчика и замораживается на бирже. Фрилансеру рекомендуется начинать работу после резервирования денежной суммы. При успешном выполнении проекта средства высвобождаются из резервного счета и зачисляются на счет фрилансера.",
+	"home-page.guestion-itme2-customer-title": "Как сервис защитит меня от мошенников?",
+	"home-page.guestion-itme2-freelancer-text": "Оформление деталей услуг и примеров работ презентует мастерство исполнителя. Опишите весь спектр своего опыта, подберите лучшие работы для портфолио, укажите преимущества своего сервиса. Это повысит шансы стать исполнителем.",
+	"home-page.guestion-itme2-freelancer-title": "Описание услуг",
+	"home-page.guestion-itme3-customer-text": "Скрытых платежей нет. Есть только комиссия за вывод средств. Ее размер определяется банком получателя.",
+	"home-page.guestion-itme3-customer-title": "Есть ли скрытые платежи?",
+	"home-page.guestion-itme3-freelancer-text": "Создав три пакета сервиса Базовый, Стандартный и Премиум, фрилансер обеспечивает ассортимент опций и часто увеличивает среднюю цену сделки. Гибкость услуг позволяет заказчику выбрать наиболее оптимальный комплект.",
+	"home-page.guestion-itme3-freelancer-title": "Оформление пакетов сервиса",
+	"home-page.guestion-itme4-freelancer-text": "Кроме основной услуги, заказчику могут быть интересны дополнительные опции, например, рерайт текста после перевода, технический аудит сайта и пр. Правильно оформленный раздел Допродажа увеличивает результаты обеих сторон сделки.",
+	"home-page.guestion-itme4-freelancer-title": "Продажа сопутствующих услуг",
+	"home-page.guestion-itme5-freelancer-text": "Опция позволяет создавать предложения под уникальные запросы заказчиков, которые видны только сторонам сделки. Кастомные офферы создаются по специальной цене и срокам выполнения, исходя из запроса заказчика.",
+	"home-page.guestion-itme5-freelancer-title": "Создание специальных предложений",
+	"home-page.guestion-subtitle": "появились вопросы?",
+	"home-page.guestion-text": "Выберите необходимую категорию: Заказчикам / Фрилансерам",
+	"home-page.guestion-text2": "Не нашли ответ? Переходите на страницу Вопросы и Ответы.",
+	"home-page.guestion-title": "Часто задаваемые вопросы",
+	"home-page.how-work-for-customer": "Для заказчика",
+	"home-page.how-work-for-freelancer": "Для фрилансера",
+	"home-page.how-work-item1-customer": "Ознакомьтесь с примерами работ фрилансера",
+	"home-page.how-work-item1-freelancer": "Создайте профайл - это ваша визитная карточка фрилансера.",
+	"home-page.how-work-item2-customer": "Почитайте отзывы от предыдущих заказчиков",
+	"home-page.how-work-item2-freelancer": "Опишите весь спектр своего опыта, подберите лучшие работы для портфолио, укажите преимущества своего сервиса.",
+	"home-page.how-work-item3-customer": "Выберите удобный пакет услуг для проекта",
+	"home-page.how-work-item3-freelancer": "Создайте три пакета сервиса Базовый, Стандартный и Премиум. Это позволит увеличить ассортимент опций и часто среднюю цену сделки.",
+	"home-page.how-work-item4-customer": "Свяжитесь с фрилансером для согласования деталей",
+	"home-page.how-work-item4-freelancer": "Используйте дополнительные опции для увеличения результатов обеих сторон.",
+	"home-page.how-work-subtitle": "работай с уверенностью",
+	"home-page.how-work-text": "Воспользуйтесь фильтрами поиска, чтобы выбрать необходимую категорию услуг для вашего проекта.",
+	"home-page.how-work-text2": "Теперь осталось всего лишь определиться с подходящим фрилансером. Обратите внимание на 4 простых шага, чтобы найти лучшего исполнителя.",
+	"home-page.how-work-text3": "Сделайте четыре простых шага, чтобы присоединиться з сообществу талантливых и креативных мастеров.",
+	"home-page.how-work-title": "Как это работает?",
 	"home-page.search-subtitle": "Gigrum - онлайн биржа фрилансеров для бизнеса",
 	"home-page.search-title": "Десятки тысяч услуг, скорость и качество исполнения именно здесь",
+	"home-page.specialist-item1": "Графика и Дизайн",
+	"home-page.specialist-item1-text": "Создаем дизайн логотипов, сайтов, моб. приложений, дизайн полиграфии,  брендбук.",
+	"home-page.specialist-item2": "Вёрстка и Разработка",
+	"home-page.specialist-item2-text": "Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,  верстка, QA",
+	"home-page.specialist-item3": "Копирайтинг и Переводы",
+	"home-page.specialist-item3-text": "Рерайт, художественный текст, веб-контент, рефераты, курсовые, дипломы, статьи.",
+	"home-page.specialist-item4": "SЕО и Аналитика",
+	"home-page.specialist-item4-text": "Исследование рынка и опросы, поисковое продвижение, продажа ссылок, SERM, генерация лидов",
+	"home-page.specialist-item5": "Интернет маркетинг",
+	"home-page.specialist-item5-text": "Продвижение сайта и блога, реклама в социальных медиа, поисковые системы, SMM, e-mail маркетинг.",
+	"home-page.specialist-item6": "Видео и Анимация",
+	"home-page.specialist-item6-text": "2D Анимация, 3D Анимация, музыка/звуки, видео, виртуальные туры, раскадровки, гейм-арт.",
+	"home-page.specialist-subtitle": "Категории работ",
+	"home-page.specialist-title": "Найдите идеального специалиста",
+	"home-page.support-btn": "перейти на страницу поддержки",
+	"home-page.support-subtitle": "всегда на связи",
+	"home-page.support-text": "Техническая и консультационная поддержка команды Gigrum, которая доступна круглые сутки каждый день недели.",
+	"home-page.support-title": "Поддержка 24/7",
 	"home-page.to-catalog": "перейти в каталог",
 	"languages.change-language": "Изменить язык",
 	"languages.ru-full": "Русский",
