--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -549,6 +549,18 @@
 	"service-page.nonAuthorized-title": "Ошибка авторизации",
 	"service-page.not-authorized-message1": "Вы не можите заказать услугу пока не авторизируетесь",
 	"service-page.not-authorized-message2": "Зарегистрируйтесь если вы ещё этого не сделали",
+	"service-page.notification-change-lvl": "Изменение уровня",
+	"service-page.notification-deadlines": "Вышедшие сроки",
+	"service-page.notification-new-message-in-project": "Новые сообщения в активном проекте",
+	"service-page.notification-new-order": "Новые заказы",
+	"service-page.notification-new-private": "Новые личные сообщения",
+	"service-page.notification-new-service": "Сервисные уведомления",
+	"service-page.notification-order-feedback": "Отзыв к заказу",
+	"service-page.notification-reservation-of-funds": "Резервирование финансовых средств",
+	"service-page.notification-text": "Подпишитесь на электронные письма, чтобы узнавать что происходит, когда вы находитесь вне сети. Рассылку можно изменить в любое время.",
+	"service-page.notification-title1": "Все уведомления по электронной почте",
+	"service-page.notification-title2": "Базовые уведомления",
+	"service-page.notification-title3": "Проектные уведомления",
 	"service-page.order-service": "Заказать услугу",
 	"service-page.packages-and-services": "пакеты и услуги",
 	"service-page.portfolio": "Портфолио",
