--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -549,6 +549,18 @@
 	"service-page.nonAuthorized-title": "Помилка авторизації",
 	"service-page.not-authorized-message1": "Ви не можите замовити послугу поки не авторизуєтес",
 	"service-page.not-authorized-message2": "Увійдіть якщо ви ще цього не зробили",
+	"service-page.notification-change-lvl": "Зміна рівня",
+	"service-page.notification-deadlines": "Провалені терміни",
+	"service-page.notification-new-message-in-project": "Нові повідомлення в активному проект",
+	"service-page.notification-new-order": "Нові замовлення",
+	"service-page.notification-new-private": "Нові приватні повідомлення",
+	"service-page.notification-new-service": "Сервісні сповіщення",
+	"service-page.notification-order-feedback": "Відгук до замовлення",
+	"service-page.notification-reservation-of-funds": "Резервування фінансових коштів",
+	"service-page.notification-text": "Підпишіться на електронні листи, щоб дізнаватися що відбувається, коли ви перебуваєте не в  мережі. Розсилку можна змінити в будь-який час.",
+	"service-page.notification-title1": "Всі сповіщення  по електронній пошті",
+	"service-page.notification-title2": "Базові сповіщення",
+	"service-page.notification-title3": "Проектні сповіщення",
 	"service-page.order-service": "Замовити послугу",
 	"service-page.packages-and-services": "пакети і послуги",
 	"service-page.portfolio": "Портфоліо",
