--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -95,7 +95,7 @@
 	"chat.work_chat.offer-data.days-to-finish": "Кол-во дней до завершения заказа",
 	"chat.work_chat.offer-data.finish-work": "Завершить работу",
 	"chat.work_chat.offer-data.history": "История",
-	"chat.work_chat.offer-data.hold-money": "Зарезирвировать оплату",
+	"chat.work_chat.offer-data.hold-money": "Зарезервировать оплату",
 	"chat.work_chat.offer-data.start-work": "Приступить к работе",
 	"chat.work_chat.offer-data.time-to-do": "Срок исполнения:",
 	"chat.work_chat.offer-data.title-moves": "Действия",
@@ -178,8 +178,11 @@
 	"dashboard.cash-box.choose-operation-type": "Выберите операцию",
 	"dashboard.cash-box.input-money": " Ввести деньги",
 	"dashboard.cash-box.output-money": "Вывести деньги",
+	"dashboard.cash-box.send-money": "Внести деньги",
+	"dashboard.cash-box.summ": "Сумма",
 	"dashboard.cash-box.ur-password": "ваш пароль",
 	"dashboard.cash-box.wright-summ": "напишите сумму",
+	"dashboard.cash-box.wrong-pass": "Не верный пароль",
 	"dashboard.create-service.fifth-step.add-answer": "Добавить еще ответ",
 	"dashboard.create-service.fifth-step.add-requirement": "Добавить требование",
 	"dashboard.create-service.fifth-step.answer-required": "Ответ обязательный",
@@ -214,10 +217,14 @@
 	"dashboard.create-service.first-step.tool-tip.tag-subtitle": "Это поможет заказчикам найти Вас во время поиска.",
 	"dashboard.create-service.first-step.tool-tip.tag-title": "Введите теги",
 	"dashboard.create-service.forth-step.add-option": "Добавить вопрос",
+	"dashboard.create-service.forth-step.placeholder-answer": "Ответьте на вышеуказанный вопрос",
+	"dashboard.create-service.forth-step.placeholder-question": "Напишите вопрос",
 	"dashboard.create-service.forth-step.title": "4. Часто задаваемые вопросы",
 	"dashboard.create-service.forth-step.tool-tip.subtitle": "Составьте список часто задаваемых вопросов \nот клиентов. Постарайтесь ничего не упустить, чтобы не тратить своё время и время покупателя.\nВпишите вопрос, а за ним ниже ответ.",
 	"dashboard.create-service.forth-step.tool-tip.title": "Добавьте часто задаваемые вопросы. ",
 	"dashboard.create-service.save-and-next": "сохранить и продолжить",
+	"dashboard.create-service.second-step.max-error": "с 500 максимально",
+	"dashboard.create-service.second-step.minimal-error": "100 минимум",
 	"dashboard.create-service.second-step.subtitle": "Опишите услугу как можно подробнее",
 	"dashboard.create-service.second-step.title": "2. Описание услуги",
 	"dashboard.create-service.second-step.tool-tip.subtitle": "Проявите оригинальность:  добавьте аргументы в свою пользу, дайте гарантии, предоставьте бонусы и т.Д. чтобы покупатель выбрал именно Вашу услугу.",
@@ -346,6 +353,7 @@
 	"general.additional-education": "Дополнительное образование",
 	"general.authorize": "Авторизируйтесь",
 	"general.avatar": "Аватар",
+	"general.back": "вернуться",
 	"general.cancel": "Отмена",
 	"general.choose": "выбрать",
 	"general.city": "город",
@@ -420,6 +428,8 @@
 	"packages.basic": "Базовый",
 	"packages.premium": "Премиум",
 	"packages.standart": "Стандарт",
+	"payment.need-such-amount": "Для оплаты услуги не хватает ",
+	"payment.not-enaught-money": "Не достаточно денег, чтобы оплатить услугу",
 	"raitings.average-rating": "Средняя оценка",
 	"raitings.contact-level": "Контактность",
 	"raitings.period-of-execution": "Срок исполнения",
