--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -95,7 +95,7 @@
 	"chat.work_chat.offer-data.days-to-finish": "Кількість днів до завершення замовлення",
 	"chat.work_chat.offer-data.finish-work": "Завершити роботу",
 	"chat.work_chat.offer-data.history": "Історія",
-	"chat.work_chat.offer-data.hold-money": "Зарезірвіровать оплату",
+	"chat.work_chat.offer-data.hold-money": "Зарезервувати оплату",
 	"chat.work_chat.offer-data.start-work": "Приступити до роботи",
 	"chat.work_chat.offer-data.time-to-do": "Термін виконання:",
 	"chat.work_chat.offer-data.title-moves": "Дії",
@@ -178,8 +178,11 @@
 	"dashboard.cash-box.choose-operation-type": "Виберіть операцію",
 	"dashboard.cash-box.input-money": " Ввести гроші",
 	"dashboard.cash-box.output-money": " Ввести гроші",
+	"dashboard.cash-box.send-money": "Внести гроші",
+	"dashboard.cash-box.summ": "Сума",
 	"dashboard.cash-box.ur-password": "Ваш пароль",
 	"dashboard.cash-box.wright-summ": "напишіть суму",
+	"dashboard.cash-box.wrong-pass": "Невірний пароль",
 	"dashboard.create-service.fifth-step.add-answer": "Додати ще відповідь",
 	"dashboard.create-service.fifth-step.add-requirement": "Додати вимогу",
 	"dashboard.create-service.fifth-step.answer-required": "Відповідь обов'язковий",
@@ -214,10 +217,14 @@
 	"dashboard.create-service.first-step.tool-tip.tag-subtitle": "Це допоможе замовникам знайти Вас під час пошуку.",
 	"dashboard.create-service.first-step.tool-tip.tag-title": "Введіть теги",
 	"dashboard.create-service.forth-step.add-option": "Додати питання",
+	"dashboard.create-service.forth-step.placeholder-answer": "Дайте відповідь на вищезгадане питання",
+	"dashboard.create-service.forth-step.placeholder-question": "Напишіть питання",
 	"dashboard.create-service.forth-step.title": "4. Часті питання",
 	"dashboard.create-service.forth-step.tool-tip.subtitle": "Складіть список поширених запитань\nвід клієнтів. Постарайтеся нічого не упустити, щоб не витрачати свій час і час покупця.\nВпишіть питання, а за ним нижче відповідь.",
 	"dashboard.create-service.forth-step.tool-tip.title": "Додайте часто задаються.",
 	"dashboard.create-service.save-and-next": "зберегти і продовжити",
+	"dashboard.create-service.second-step.max-error": "з 500 максимально",
+	"dashboard.create-service.second-step.minimal-error": "100 мінімум",
 	"dashboard.create-service.second-step.subtitle": "Опишіть послугу якомога докладніше",
 	"dashboard.create-service.second-step.title": "2. Опис послуги",
 	"dashboard.create-service.second-step.tool-tip.subtitle": "Проявіть оригінальність: додайте аргументи на свою користь, дайте гарантії, надайте бонуси і т.д. щоб покупець вибрав саме Вашу послугу.",
@@ -346,6 +353,7 @@
 	"general.additional-education": "Додаткова освіта",
 	"general.authorize": "Авторизуйтесь",
 	"general.avatar": "Аватар",
+	"general.back": "повернутися",
 	"general.cancel": "Скасувати",
 	"general.choose": "вибрати",
 	"general.city": "місто",
@@ -420,6 +428,8 @@
 	"packages.basic": "Базовий",
 	"packages.premium": "Преміум",
 	"packages.standart": "Стандарт",
+	"payment.need-such-amount": "Для оплати послуги не вистачає",
+	"payment.not-enaught-money": "Мало грошей, щоб оплатити послугу",
 	"raitings.average-rating": "Середня оцінка",
 	"raitings.contact-level": "Контактність",
 	"raitings.period-of-execution": "Термін виконання",
