--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -169,6 +169,11 @@
 	"das.ranks.title": "Мои достижения",
 	"das.ranks.u-get-lvl": "Вы достигли уровня",
 	"das.ranks.ur-lvl": "Ваш уровень",
+	"academicDegrees.lvl1": "Бакалавр",
+	"academicDegrees.lvl2": "Магистр",
+	"academicDegrees.lvl3": "Аспирант",
+	"academicDegrees.lvl4": "Кандидат наук",
+	"academicDegrees.lvl5": "Доктор наук",
 	"dashboard.cards-on-top.all-deals-by-all-time": "Кол-во заявок за время",
 	"dashboard.cards-on-top.balance": "состояние счёта",
 	"dashboard.cards-on-top.compleated-deals": "кол-во выполненных заказов",
