--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -169,6 +169,11 @@
 	"das.ranks.title": "Мої досягнення",
 	"das.ranks.u-get-lvl": "Ви досягли рівня",
 	"das.ranks.ur-lvl": "Ваш рівень",
+	"academicDegrees.lvl1": "Бакалавр",
+	"academicDegrees.lvl2": "Магістр",
+	"academicDegrees.lvl3": "Аспірант",
+	"academicDegrees.lvl4": "Кандидат наук",
+	"academicDegrees.lvl5": "Доктор наук",
 	"dashboard.cards-on-top.all-deals-by-all-time": "Кількість заявок за час",
 	"dashboard.cards-on-top.balance": "стан рахунку",
 	"dashboard.cards-on-top.compleated-deals": "к-сть виконаних замовлень",
