--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -204,7 +204,7 @@
 	"dashboard.create-service.fifth-step.tool-tip.title-field-subtitle": "Тут Ви можете перерахувати і описати список вимог для замовника, які Вам необхідні, щоб почати роботу.",
 	"dashboard.create-service.fifth-step.tool-tip.title-field-title": "Напишіть, що Вам необхідно для старту",
 	"dashboard.create-service.first-step.category-title": "Категорія Вашої діяльності",
-	"dashboard.create-service.first-step.main-photo-btn": "",
+	"dashboard.create-service.first-step.main-photo-btn": "Зробити обкладинкою",
 	"dashboard.create-service.first-step.min-title-length": " з 70 максимально",
 	"dashboard.create-service.first-step.portfolio-title": "Завантаження портфоліо",
 	"dashboard.create-service.first-step.subcategory-title": "Категорія Вашої діяльності",
