--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -204,7 +204,7 @@
 	"dashboard.create-service.fifth-step.tool-tip.title-field-subtitle": "Тут Вы можете перечислить и описать список требований для заказчика, которые Вам необходимы, чтобы начать работу.",
 	"dashboard.create-service.fifth-step.tool-tip.title-field-title": "Напишите, что Вам необходимо для старта",
 	"dashboard.create-service.first-step.category-title": "Категория Вашей деятельности",
-	"dashboard.create-service.first-step.main-photo-btn": "",
+	"dashboard.create-service.first-step.main-photo-btn": "Сделать обложкой",
 	"dashboard.create-service.first-step.min-title-length": "из 70 максимально",
 	"dashboard.create-service.first-step.portfolio-title": "Загрузка портфолио",
 	"dashboard.create-service.first-step.subcategory-title": "Подкатегория Вашей деятельности",
@@ -559,6 +559,7 @@
 	"service-page.days-of-completion": "дней выполнения",
 	"service-page.description": "Описание услуги",
 	"service-page.final-price": "конечная стоимость",
+	"service-page.days": "дней",
 	"service-page.more-services": "больше услуг в профиле",
 	"service-page.nonAuthorized-subtitle": "Неавторизованные пользователи не могут заказать услугу",
 	"service-page.nonAuthorized-title": "Ошибка авторизации",
