--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -518,6 +518,7 @@
 	"packages.basic": "Базовий",
 	"packages.premium": "Преміум",
 	"packages.standart": "Стандарт",
+	"packages.price": "Ціна",
 	"payment.need-such-amount": "Для оплати послуги не вистачає",
 	"payment.not-enaught-money": "Мало грошей, щоб оплатити послугу",
 	"raitings.average-rating": "Середня оцінка",
@@ -559,6 +560,7 @@
 	"service-page.days-of-completion": "днів виконання",
 	"service-page.description": "Опис послуги",
 	"service-page.final-price": "кінцева вартість",
+	"service-page.days": "днів",
 	"service-page.more-services": "більше послуг в профілі",
 	"service-page.nonAuthorized-subtitle": "Неавторизовані користувачі не можуть замовити послугу",
 	"service-page.nonAuthorized-title": "Помилка авторизації",
