before lang change

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -228,7 +228,7 @@
 	"dashboard.create-service.forth-step.tool-tip.subtitle": "Составьте список часто задаваемых вопросов \nот клиентов. Постарайтесь ничего не упустить, чтобы не тратить своё время и время покупателя.\nВпишите вопрос, а за ним ниже ответ.",
 	"dashboard.create-service.forth-step.tool-tip.title": "Добавьте часто задаваемые вопросы. ",
 	"dashboard.create-service.save-and-next": "сохранить и продолжить",
-	"dashboard.create-service.second-step.max-error": "с 500 максимально",
+	"dashboard.create-service.second-step.max-error": "из 500 максимально",
 	"dashboard.create-service.second-step.minimal-error": "/100 минимум",
 	"dashboard.create-service.second-step.subtitle": "Опишите услугу как можно подробнее",
 	"dashboard.create-service.second-step.title": "2. Описание услуги",
