adapt third step not full

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -210,7 +210,8 @@
 	"dashboard.create-service.first-step.subcategory-title": "Подкатегория Вашей деятельности",
 	"dashboard.create-service.first-step.subtitle": "Название услуги",
 	"dashboard.create-service.first-step.tags-title": "Ключевые слова для поиска вашей услуги",
-	"dashboard.create-service.first-step.title": "1. Титульная информация",
+  "dashboard.create-service.first-step.title": "1. Титульная информация",
+  "dashboard.create-service.first-step.steps-counter": "1-й шаг из 6",
 	"dashboard.create-service.first-step.tool-tip.category-subtitle": "Это позволит покупателям быстро найти Вашу услугу. ",
 	"dashboard.create-service.first-step.tool-tip.category-title": "Выберите категорию, наиболее подходящую для Вашей услуги",
 	"dashboard.create-service.first-step.tool-tip.file-loader-subtitle": "Добавьте запоминающийся контент в свою галерею, чтобы отличаться от конкурентов.\nС загруженных файлов, вы можете выбрать один для титульного изображения на странице.",
@@ -231,11 +232,13 @@
 	"dashboard.create-service.second-step.max-error": "из 500 максимально",
 	"dashboard.create-service.second-step.minimal-error": "/100 минимум",
 	"dashboard.create-service.second-step.subtitle": "Опишите услугу как можно подробнее",
-	"dashboard.create-service.second-step.title": "2. Описание услуги",
+  "dashboard.create-service.second-step.title": "2. Описание услуги",
+  "dashboard.create-service.second-step.steps-counter": "2-й шаг из 6",
 	"dashboard.create-service.second-step.tool-tip.subtitle": "Проявите оригинальность:  добавьте аргументы в свою пользу, дайте гарантии, предоставьте бонусы и т.Д. чтобы покупатель выбрал именно Вашу услугу.",
 	"dashboard.create-service.second-step.tool-tip.title": "Опишите услугу, которую вы предлагаете, как можно подробнее. ",
 	"dashboard.create-service.third-step.add-option": "Добавить опцию",
-	"dashboard.create-service.third-step.all-packages": "3 пакета",
+  "dashboard.create-service.third-step.all-packages": "3 пакета",
+  "dashboard.create-service.third-step.steps-counter": "3-й шаг из 6",
 	"dashboard.create-service.third-step.description-block.subtitle": "Расширьте свои возможности",
 	"dashboard.create-service.third-step.description-block.title": "Оформите услуги в трёх ценовых вариантах",
 	"dashboard.create-service.third-step.extra-form.add-option": "Добавить опцию",
