--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -210,7 +210,8 @@
 	"dashboard.create-service.first-step.subcategory-title": "Категорія Вашої діяльності",
 	"dashboard.create-service.first-step.subtitle": "Назва послуги",
 	"dashboard.create-service.first-step.tags-title": "Ключові слова для пошуку вашої послуги",
-	"dashboard.create-service.first-step.title": "1. Титульна інформація",
+  "dashboard.create-service.first-step.title": "1. Титульна інформація",
+  "dashboard.create-service.first-step.steps-counter": "1-й крок з 6",
 	"dashboard.create-service.first-step.tool-tip.category-subtitle": "Це дозволить покупцям швидко знайти Вашу послугу.",
 	"dashboard.create-service.first-step.tool-tip.category-title": "Виберіть категорію, найбільш підходящу для Вашої послуги",
 	"dashboard.create-service.first-step.tool-tip.file-loader-subtitle": "Додайте запам'ятовується контент в свою галерею, щоб відрізнятися від конкурентів.\nЗ завантажених файлів, ви можете вибрати один для титульного зображення на сторінці.",
@@ -230,12 +231,14 @@
 	"dashboard.create-service.save-and-next": "зберегти і продовжити",
 	"dashboard.create-service.second-step.max-error": "з 500 максимально",
 	"dashboard.create-service.second-step.minimal-error": "/100 мінімум",
-	"dashboard.create-service.second-step.subtitle": "Опишіть послугу якомога докладніше",
+  "dashboard.create-service.second-step.subtitle": "Опишіть послугу якомога докладніше",
+  "dashboard.create-service.second-step.steps-counter": "2-й крок з 6",
 	"dashboard.create-service.second-step.title": "2. Опис послуги",
 	"dashboard.create-service.second-step.tool-tip.subtitle": "Проявіть оригінальність: додайте аргументи на свою користь, дайте гарантії, надайте бонуси і т.д. щоб покупець вибрав саме Вашу послугу.",
 	"dashboard.create-service.second-step.tool-tip.title": "Опишіть послугу, яку ви пропонуєте, як можна докладніше.",
 	"dashboard.create-service.third-step.add-option": "Додати опцію",
-	"dashboard.create-service.third-step.all-packages": "3 пакети",
+  "dashboard.create-service.third-step.all-packages": "3 пакети",
+  "dashboard.create-service.third-step.steps-counter": "3-й крок з 6",
 	"dashboard.create-service.third-step.description-block.subtitle": "Розширте свої можливості",
 	"dashboard.create-service.third-step.description-block.title": "Оформіть послуги в трьох цінових варіантах",
 	"dashboard.create-service.third-step.extra-form.add-option": "Додати опцію",
