--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -198,7 +198,8 @@
 	"dashboard.create-service.fifth-step.succes-many-answer": "Разрешить более одного ответа на вопрос",
 	"dashboard.create-service.fifth-step.succes-many-answer-description": "покупатель сможет отметить несколько вариантов",
 	"dashboard.create-service.fifth-step.symbols": "символов",
-	"dashboard.create-service.fifth-step.title": "5. Бриф",
+  "dashboard.create-service.fifth-step.title": "5. Бриф",
+  "dashboard.create-service.fifth-step.steps-counter": "5-й шаг из 6",
 	"dashboard.create-service.fifth-step.title-placehilder": "Напр., спецификации, брендбук, размеры, фотоматериалы",
 	"dashboard.create-service.fifth-step.to-many": "достаточно",
 	"dashboard.create-service.fifth-step.tool-tip.title-field-subtitle": "Тут Вы можете перечислить и описать список требований для заказчика, которые Вам необходимы, чтобы начать работу.",
@@ -225,7 +226,8 @@
 	"dashboard.create-service.forth-step.add-option": "Добавить вопрос",
 	"dashboard.create-service.forth-step.placeholder-answer": "Ответьте на вышеуказанный вопрос",
 	"dashboard.create-service.forth-step.placeholder-question": "Напишите вопрос",
-	"dashboard.create-service.forth-step.title": "4. Часто задаваемые вопросы",
+  "dashboard.create-service.forth-step.title": "4. Часто задаваемые вопросы",
+  "dashboard.create-service.forth-step.steps-counter": "4-й шаг из 6",
 	"dashboard.create-service.forth-step.tool-tip.subtitle": "Составьте список часто задаваемых вопросов \nот клиентов. Постарайтесь ничего не упустить, чтобы не тратить своё время и время покупателя.\nВпишите вопрос, а за ним ниже ответ.",
 	"dashboard.create-service.forth-step.tool-tip.title": "Добавьте часто задаваемые вопросы. ",
 	"dashboard.create-service.save-and-next": "сохранить и продолжить",
