--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -198,7 +198,8 @@
 	"dashboard.create-service.fifth-step.succes-many-answer": "Дозволити більше однієї відповіді на питання",
 	"dashboard.create-service.fifth-step.succes-many-answer-description": "покупець зможе відзначити кілька варіантів",
 	"dashboard.create-service.fifth-step.symbols": "символів",
-	"dashboard.create-service.fifth-step.title": "5. Бриф",
+  "dashboard.create-service.fifth-step.title": "5. Бриф",
+  "dashboard.create-service.fifth-step.steps-counter": "5-й крок з 6",
 	"dashboard.create-service.fifth-step.title-placehilder": "Напр., Специфікації, брендбук, розміри, фотоматеріали",
 	"dashboard.create-service.fifth-step.to-many": "досить",
 	"dashboard.create-service.fifth-step.tool-tip.title-field-subtitle": "Тут Ви можете перерахувати і описати список вимог для замовника, які Вам необхідні, щоб почати роботу.",
@@ -225,7 +226,8 @@
 	"dashboard.create-service.forth-step.add-option": "Додати питання",
 	"dashboard.create-service.forth-step.placeholder-answer": "Дайте відповідь на вищезгадане питання",
 	"dashboard.create-service.forth-step.placeholder-question": "Напишіть питання",
-	"dashboard.create-service.forth-step.title": "4. Часті питання",
+  "dashboard.create-service.forth-step.title": "4. Часті питання",
+  "dashboard.create-service.forth-step.steps-counter": "4-й крок з 6",
 	"dashboard.create-service.forth-step.tool-tip.subtitle": "Складіть список поширених запитань\nвід клієнтів. Постарайтеся нічого не упустити, щоб не витрачати свій час і час покупця.\nВпишіть питання, а за ним нижче відповідь.",
 	"dashboard.create-service.forth-step.tool-tip.title": "Додайте часто задаються.",
 	"dashboard.create-service.save-and-next": "зберегти і продовжити",
